--- a/.github/workflows/aws-deploy.yml
+++ b/.github/workflows/aws-deploy.yml
@@ -19,12 +19,15 @@ jobs:
         run: |
           echo "${{ secrets.EC2_SSH_KEY }}" > private_key.pem
           chmod 600 private_key.pem
+          
+      - name: Copy files
+        run: |
+          rsync -avz --delete -e "ssh -o -o StrictHostKeyChecking=no -i private_key.pem " ./ ubuntu@3.143.216.45:/home/ubuntu/www/
 
       - name: Deploy
         run: |
           ssh -o StrictHostKeyChecking=no -i private_key.pem ubuntu@3.143.216.45 << 'EOF'
             cd /home/ubuntu/www 
-            git pull origin main
             composer install --no-dev --optimize-autoloader 
             systemctl restart apache2
             echo "Finished"
